[gd_scene load_steps=4 format=3 uid="uid://tbf1os6qic1s"]

[ext_resource type="FontFile" uid="uid://uikfi7mpxnq" path="res://src/fonts/Play-Regular.ttf" id="1_ahedj"]
[ext_resource type="Script" path="res://GUI.gd" id="1_byeut"]

[sub_resource type="Theme" id="Theme_hyaan"]
default_font = ExtResource("1_ahedj")
default_font_size = 48

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hyaan")
script = ExtResource("1_byeut")

[node name="background_menu" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.447059, 0.447059, 1)

[node name="Buttons_menu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="VBoxContainer" parent="Buttons_menu"]
layout_mode = 2
alignment = 1

[node name="btn_start_pk" type="Button" parent="Buttons_menu/HSplitContainer"]
layout_mode = 2
text = "$PLAY_PK"

[node name="btn_start_player" type="Button" parent="Buttons_menu/HSplitContainer"]
layout_mode = 2
text = "$PLAY_PLAYER"

[node name="btn_setting" type="Button" parent="Buttons_menu/HSplitContainer"]
layout_mode = 2
text = "$SETTINGS"

[node name="btn_exit" type="Button" parent="Buttons_menu/HSplitContainer"]
layout_mode = 2
text = "$EXIT"

[connection signal="pressed" from="Buttons_menu/HSplitContainer/btn_start_pk" to="." method="_on_btn_start_pk_pressed"]
[connection signal="pressed" from="Buttons_menu/HSplitContainer/btn_start_player" to="." method="_on_btn_start_player_pressed"]
[connection signal="pressed" from="Buttons_menu/HSplitContainer/btn_setting" to="." method="_on_btn_setting_pressed"]
[connection signal="pressed" from="Buttons_menu/HSplitContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
